# concatjs-windows-bug

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE  main.js  package.json  test.txt
